@@ -10,7 +10,8 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import com.backend.coapp.dto.request.CreateApplicationRequest;
 import com.backend.coapp.dto.request.UpdateApplicationRequest;
 import com.backend.coapp.dto.response.ApplicationResponse;
-import com.backend.coapp.exception.*;
+import com.backend.coapp.exception.application.*;
+import com.backend.coapp.exception.company.CompanyNotFoundException;
 import com.backend.coapp.model.document.UserModel;
 import com.backend.coapp.model.enumeration.ApplicationStatus;
 import com.backend.coapp.service.ApplicationService;
@@ -18,6 +19,7 @@ import com.backend.coapp.service.JwtService;
 import java.time.LocalDate;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -25,6 +27,7 @@ import org.springframework.boot.webmvc.test.autoconfigure.AutoConfigureMockMvc;
 import org.springframework.boot.webmvc.test.autoconfigure.WebMvcTest;
 import org.springframework.http.MediaType;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import tools.jackson.databind.ObjectMapper;
@@ -44,6 +47,8 @@ public class ApplicationControllerTest {
   private CreateApplicationRequest createRequest;
   private UpdateApplicationRequest updateRequest;
 
+  private final LocalDate DATE = LocalDate.of(2800, 1, 1);
+
   @BeforeEach
   public void setUp() {
     UserModel mockUser = mock(UserModel.class);
@@ -51,32 +56,32 @@ public class ApplicationControllerTest {
     when(mockUser.getFirstName()).thenReturn("John");
     when(mockUser.getLastName()).thenReturn("Doe");
 
-    // Match the constructor order: applicationId, companyId, jobTitle, status, applicationDeadline,
-    // jobDescription, numPositions, sourceLink, dateApplied, notes
     this.mockResponse =
         new ApplicationResponse(
             "app789",
             "comp456",
             "Software Engineer",
             ApplicationStatus.APPLIED,
-            LocalDate.of(2024, 1, 1),
+            DATE,
             "Great role",
             1,
             "https://linkedin.com",
-            LocalDate.of(2024, 1, 1),
-            "I think it's not that good.");
+            DATE,
+            "I think it's not that good.",
+            DATE);
 
     this.createRequest =
         CreateApplicationRequest.builder()
             .companyId("comp456")
             .jobTitle("Software Engineer")
             .status(ApplicationStatus.APPLIED)
-            .applicationDeadline(LocalDate.of(2024, 1, 1))
+            .applicationDeadline(DATE)
             .jobDescription("Great role")
             .numPositions(1)
             .sourceLink("https://linkedin.com")
-            .dateApplied(LocalDate.of(2024, 1, 1))
+            .dateApplied(DATE)
             .notes("I think it's not that good.")
+            .interviewDate(DATE)
             .build();
 
     this.updateRequest =
@@ -84,12 +89,13 @@ public class ApplicationControllerTest {
             .companyId("comp456")
             .jobTitle("Senior Engineer")
             .status(ApplicationStatus.APPLIED)
-            .applicationDeadline(LocalDate.of(2024, 1, 1))
+            .applicationDeadline(DATE)
             .jobDescription("Great role")
             .numPositions(1)
             .sourceLink("https://linkedin.com")
-            .dateApplied(LocalDate.of(2024, 1, 1))
+            .dateApplied(DATE)
             .notes("Updated notes.")
+            .interviewDate(DATE)
             .build();
 
     when(this.authentication.getPrincipal()).thenReturn(mockUser);
@@ -109,12 +115,13 @@ public class ApplicationControllerTest {
             eq("comp456"),
             eq("Software Engineer"),
             eq(ApplicationStatus.APPLIED),
-            eq(LocalDate.of(2024, 1, 1)),
+            eq(DATE),
             eq("Great role"),
             eq(1),
             eq("https://linkedin.com"),
-            eq(LocalDate.of(2024, 1, 1)),
-            eq("I think it's not that good.")))
+            eq(DATE),
+            eq("I think it's not that good."),
+            eq(DATE)))
         .thenReturn(this.mockResponse);
 
     mockMvc
@@ -136,12 +143,13 @@ public class ApplicationControllerTest {
             eq("comp456"),
             eq("Software Engineer"),
             eq(ApplicationStatus.APPLIED),
-            eq(LocalDate.of(2024, 1, 1)),
+            eq(DATE),
             eq("Great role"),
             eq(1),
             eq("https://linkedin.com"),
-            eq(LocalDate.of(2024, 1, 1)),
-            eq("I think it's not that good."));
+            eq(DATE),
+            eq("I think it's not that good."),
+            eq(DATE));
   }
 
   @Test
@@ -153,10 +161,11 @@ public class ApplicationControllerTest {
             any(ApplicationStatus.class),
             any(LocalDate.class),
             anyString(),
-            any(Integer.class),
+            anyInt(),
             anyString(),
             any(LocalDate.class),
-            anyString()))
+            anyString(),
+            any(LocalDate.class)))
         .thenThrow(new CompanyNotFoundException());
 
     mockMvc
@@ -179,10 +188,11 @@ public class ApplicationControllerTest {
             any(ApplicationStatus.class),
             any(LocalDate.class),
             anyString(),
-            any(Integer.class),
+            anyInt(),
             anyString(),
             any(LocalDate.class),
-            anyString()))
+            anyString(),
+            any(LocalDate.class)))
         .thenThrow(new DuplicateApplicationException("job", "comp"));
 
     mockMvc
@@ -216,10 +226,11 @@ public class ApplicationControllerTest {
             any(ApplicationStatus.class),
             any(LocalDate.class),
             anyString(),
-            any(Integer.class),
+            anyInt(),
             anyString(),
             any(LocalDate.class),
-            anyString());
+            anyString(),
+            any(LocalDate.class));
   }
 
   @Test
@@ -231,10 +242,11 @@ public class ApplicationControllerTest {
             any(ApplicationStatus.class),
             any(LocalDate.class),
             anyString(),
-            any(Integer.class),
+            anyInt(),
             anyString(),
             any(LocalDate.class),
-            anyString()))
+            anyString(),
+            any(LocalDate.class)))
         .thenThrow(new ApplicationServiceFailException("Database error"));
 
     mockMvc
@@ -258,27 +270,27 @@ public class ApplicationControllerTest {
             "comp456",
             "Senior Engineer",
             ApplicationStatus.APPLIED,
-            LocalDate.of(2024, 1, 1),
+            DATE,
             "Great role",
             1,
             "https://linkedin.com",
-            LocalDate.of(2024, 1, 1),
-            "Updated notes.");
+            DATE,
+            "Updated notes.",
+            DATE);
 
-    // Match Service signature: userId, applicationId, newCompanyId, newJobTitle, newStatus,
-    // newDeadline...
     when(this.applicationService.updateApplication(
             eq("user1"),
             eq("app789"),
             eq("comp456"),
             eq("Senior Engineer"),
             eq(ApplicationStatus.APPLIED),
-            eq(LocalDate.of(2024, 1, 1)),
+            eq(DATE),
             eq("Great role"),
             eq(1),
             eq("https://linkedin.com"),
-            eq(LocalDate.of(2024, 1, 1)),
-            eq("Updated notes.")))
+            eq(DATE),
+            eq("Updated notes."),
+            eq(DATE)))
         .thenReturn(updatedResponse);
 
     mockMvc
@@ -299,12 +311,13 @@ public class ApplicationControllerTest {
             eq("comp456"),
             eq("Senior Engineer"),
             eq(ApplicationStatus.APPLIED),
-            eq(LocalDate.of(2024, 1, 1)),
+            eq(DATE),
             eq("Great role"),
             eq(1),
             eq("https://linkedin.com"),
-            eq(LocalDate.of(2024, 1, 1)),
-            eq("Updated notes."));
+            eq(DATE),
+            eq("Updated notes."),
+            eq(DATE));
   }
 
   @Test
@@ -317,10 +330,11 @@ public class ApplicationControllerTest {
             any(ApplicationStatus.class),
             any(LocalDate.class),
             anyString(),
-            any(Integer.class),
+            anyInt(),
             anyString(),
             any(LocalDate.class),
-            anyString()))
+            anyString(),
+            any(LocalDate.class)))
         .thenThrow(new ApplicationNotFoundException());
 
     mockMvc
@@ -344,10 +358,11 @@ public class ApplicationControllerTest {
             any(ApplicationStatus.class),
             any(LocalDate.class),
             anyString(),
-            any(Integer.class),
+            anyInt(),
             anyString(),
             any(LocalDate.class),
-            anyString()))
+            anyString(),
+            any(LocalDate.class)))
         .thenThrow(new UnauthorizedApplicationAccessException("update"));
 
     mockMvc
@@ -382,10 +397,11 @@ public class ApplicationControllerTest {
             any(ApplicationStatus.class),
             any(LocalDate.class),
             anyString(),
-            any(Integer.class),
+            anyInt(),
             anyString(),
             any(LocalDate.class),
-            anyString());
+            anyString(),
+            any(LocalDate.class));
   }
 
   @Test
@@ -398,10 +414,11 @@ public class ApplicationControllerTest {
             any(ApplicationStatus.class),
             any(LocalDate.class),
             anyString(),
-            any(Integer.class),
+            anyInt(),
             anyString(),
             any(LocalDate.class),
-            anyString()))
+            anyString(),
+            any(LocalDate.class)))
         .thenThrow(new ApplicationServiceFailException("Database error"));
 
     mockMvc
@@ -425,6 +442,7 @@ public class ApplicationControllerTest {
             any(),
             any(),
             any(),
+            anyInt(),
             any(),
             any(),
             any(),
@@ -450,6 +468,7 @@ public class ApplicationControllerTest {
             any(),
             any(),
             any(),
+            anyInt(),
             any(),
             any(),
             any(),
@@ -528,11 +547,11 @@ public class ApplicationControllerTest {
             .companyId("comp456")
             .jobTitle("Software Engineer")
             .status(ApplicationStatus.APPLIED)
-            .applicationDeadline(LocalDate.of(2024, 1, 1))
+            .applicationDeadline(DATE)
             .jobDescription("Great role")
             .numPositions(1)
             .sourceLink("https://linkedin.com")
-            .dateApplied(LocalDate.of(2024, 1, 1))
+            .dateApplied(DATE)
             .build();
 
     ApplicationResponse responseWithoutNotes =
@@ -541,11 +560,12 @@ public class ApplicationControllerTest {
             "comp456",
             "Software Engineer",
             ApplicationStatus.APPLIED,
-            LocalDate.of(2024, 1, 1),
+            DATE,
             "Great role",
             1,
             "https://linkedin.com",
-            LocalDate.of(2024, 1, 1),
+            DATE,
+            null,
             null);
 
     when(this.applicationService.createApplication(
@@ -553,11 +573,12 @@ public class ApplicationControllerTest {
             eq("comp456"),
             eq("Software Engineer"),
             eq(ApplicationStatus.APPLIED),
-            eq(LocalDate.of(2024, 1, 1)),
+            eq(DATE),
             eq("Great role"),
             eq(1),
             eq("https://linkedin.com"),
-            eq(LocalDate.of(2024, 1, 1)),
+            eq(DATE),
+            isNull(),
             isNull()))
         .thenReturn(responseWithoutNotes);
 
@@ -577,93 +598,225 @@ public class ApplicationControllerTest {
             eq("comp456"),
             eq("Software Engineer"),
             eq(ApplicationStatus.APPLIED),
-            eq(LocalDate.of(2024, 1, 1)),
+            eq(DATE),
             eq("Great role"),
             eq(1),
             eq("https://linkedin.com"),
-            eq(LocalDate.of(2024, 1, 1)),
+            eq(DATE),
+            isNull(),
             isNull());
   }
 
+  // test get applications (filtered)
+
   @Test
-  public void updateApplication_withOnlyJobTitle_expect200() throws Exception {
-    UpdateApplicationRequest partialUpdate =
-        UpdateApplicationRequest.builder().jobTitle("Data Scientist").build();
+  @WithMockUser(username = "user1")
+  public void getApplications_whenNoParams_expect200WithApplicationsAndPagination()
+      throws Exception {
+    Map<String, Object> mockServiceResponse =
+        Map.of(
+            "applications",
+            List.of(this.mockResponse.toMap()),
+            "pagination",
+            Map.of(
+                "currentPage",
+                0,
+                "totalPages",
+                1,
+                "totalItems",
+                1L,
+                "itemsPerPage",
+                20,
+                "hasNext",
+                false,
+                "hasPrevious",
+                false));
 
-    ApplicationResponse updatedResponse =
-        new ApplicationResponse(
-            "app789",
-            "comp456",
-            "Data Scientist",
-            ApplicationStatus.APPLIED,
-            LocalDate.of(2024, 1, 1),
-            "Great role",
-            1,
-            "https://linkedin.com",
-            LocalDate.of(2024, 1, 1),
-            "I think it's not that good.");
+    when(this.applicationService.getFilteredApplications(
+            eq("user1"), isNull(), isNull(), anyString(), anyString(), eq(0), eq(20)))
+        .thenReturn(mockServiceResponse);
 
-    // Matching Service signature order
-    when(this.applicationService.updateApplication(
+    mockMvc
+        .perform(get("/api/application"))
+        .andExpect(status().isOk())
+        .andExpect(jsonPath("$.applications[0].applicationId").value("app789"))
+        .andExpect(jsonPath("$.applications[0].jobTitle").value("Software Engineer"))
+        .andExpect(jsonPath("$.pagination.currentPage").value(0))
+        .andExpect(jsonPath("$.pagination.totalItems").value(1));
+
+    verify(this.applicationService, times(1))
+        .getFilteredApplications(
+            eq("user1"), isNull(), isNull(), anyString(), anyString(), eq(0), eq(20));
+  }
+
+  @Test
+  @WithMockUser(username = "user1")
+  public void getApplications_whenSearchParam_expectPassedToService() throws Exception {
+    when(this.applicationService.getFilteredApplications(
+            eq("user1"), eq("Google"), isNull(), anyString(), anyString(), anyInt(), anyInt()))
+        .thenReturn(Map.of("applications", Collections.emptyList(), "pagination", Map.of()));
+
+    mockMvc.perform(get("/api/application").param("search", "Google")).andExpect(status().isOk());
+
+    verify(this.applicationService, times(1))
+        .getFilteredApplications(
+            eq("user1"), eq("Google"), isNull(), anyString(), anyString(), anyInt(), anyInt());
+  }
+
+  @Test
+  @WithMockUser(username = "user1")
+  public void getApplications_whenStatusParam_expectPassedToService() throws Exception {
+    when(this.applicationService.getFilteredApplications(
             eq("user1"),
-            eq("app789"),
-            isNull(), // companyId
-            eq("Data Scientist"), // jobTitle
-            isNull(), // status
-            isNull(), // deadline
-            isNull(), // description
-            isNull(), // positions
-            isNull(), // link
-            isNull(), // dateApplied
-            isNull())) // notes
-        .thenReturn(updatedResponse);
+            isNull(),
+            eq(List.of(ApplicationStatus.APPLIED)),
+            anyString(),
+            anyString(),
+            anyInt(),
+            anyInt()))
+        .thenReturn(Map.of("applications", Collections.emptyList(), "pagination", Map.of()));
 
-    mockMvc
-        .perform(
-            put("/api/application/app789")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(this.objectMapper.writeValueAsString(partialUpdate))
-                .principal(this.authentication))
-        .andExpect(status().isOk())
-        .andExpect(jsonPath("$.jobTitle").value("Data Scientist"));
+    mockMvc.perform(get("/api/application").param("status", "APPLIED")).andExpect(status().isOk());
+
+    verify(this.applicationService, times(1))
+        .getFilteredApplications(
+            eq("user1"),
+            isNull(),
+            eq(List.of(ApplicationStatus.APPLIED)),
+            anyString(),
+            anyString(),
+            anyInt(),
+            anyInt());
   }
 
   @Test
-  public void getApplications_whenValid_expect200AndApplicationList() throws Exception {
-    List<ApplicationResponse> mockList = List.of(this.mockResponse);
-
-    when(this.applicationService.getApplications(eq("user1"))).thenReturn(mockList);
+  @WithMockUser(username = "user1")
+  public void getApplications_whenMultipleStatuses_expectPassedToService() throws Exception {
+    when(this.applicationService.getFilteredApplications(
+            eq("user1"),
+            isNull(),
+            eq(List.of(ApplicationStatus.APPLIED, ApplicationStatus.REJECTED)),
+            anyString(),
+            anyString(),
+            anyInt(),
+            anyInt()))
+        .thenReturn(Map.of("applications", Collections.emptyList(), "pagination", Map.of()));
 
     mockMvc
-        .perform(get("/api/application").principal(this.authentication))
-        .andExpect(status().isOk())
-        .andExpect(jsonPath("$[0].applicationId").value("app789"))
-        .andExpect(jsonPath("$[0].jobTitle").value("Software Engineer"));
-
-    verify(this.applicationService, times(1)).getApplications(eq("user1"));
+        .perform(get("/api/application").param("status", "APPLIED,REJECTED"))
+        .andExpect(status().isOk());
   }
 
   @Test
-  public void getApplications_whenEmpty_expect200AndEmptyList() throws Exception {
-    when(this.applicationService.getApplications(eq("user1"))).thenReturn(Collections.emptyList());
-
+  @WithMockUser(username = "user1")
+  public void getApplications_whenInvalidStatus_expect400() throws Exception {
     mockMvc
-        .perform(get("/api/application").principal(this.authentication))
-        .andExpect(status().isOk())
-        .andExpect(jsonPath("$").isEmpty());
+        .perform(get("/api/application").param("status", "INVALID_STATUS"))
+        .andExpect(status().isBadRequest());
 
-    verify(this.applicationService, times(1)).getApplications(eq("user1"));
+    verify(this.applicationService, never())
+        .getFilteredApplications(
+            anyString(), any(), any(), anyString(), anyString(), anyInt(), anyInt());
   }
 
   @Test
+  @WithMockUser(username = "user1")
+  public void getApplications_whenInvalidSortBy_expect400() throws Exception {
+    mockMvc
+        .perform(get("/api/application").param("sortBy", "invalidField"))
+        .andExpect(status().isBadRequest());
+
+    verify(this.applicationService, never())
+        .getFilteredApplications(
+            anyString(), any(), any(), anyString(), anyString(), anyInt(), anyInt());
+  }
+
+  @Test
+  @WithMockUser(username = "user1")
+  public void getApplications_whenInvalidSortOrder_expect400() throws Exception {
+    mockMvc
+        .perform(get("/api/application").param("sortOrder", "sideways"))
+        .andExpect(status().isBadRequest());
+
+    verify(this.applicationService, never())
+        .getFilteredApplications(
+            anyString(), any(), any(), anyString(), anyString(), anyInt(), anyInt());
+  }
+
+  @Test
+  @WithMockUser(username = "user1")
+  public void getApplications_whenSortParams_expectPassedToService() throws Exception {
+    when(this.applicationService.getFilteredApplications(
+            eq("user1"), isNull(), isNull(), eq("dateApplied"), eq("asc"), anyInt(), anyInt()))
+        .thenReturn(Map.of("applications", Collections.emptyList(), "pagination", Map.of()));
+
+    mockMvc
+        .perform(get("/api/application").param("sortBy", "dateApplied").param("sortOrder", "asc"))
+        .andExpect(status().isOk());
+
+    verify(this.applicationService, times(1))
+        .getFilteredApplications(
+            eq("user1"), isNull(), isNull(), eq("dateApplied"), eq("asc"), anyInt(), anyInt());
+  }
+
+  @Test
+  @WithMockUser(username = "user1")
+  public void getApplications_whenPaginationParams_expectPassedToService() throws Exception {
+    when(this.applicationService.getFilteredApplications(
+            eq("user1"), isNull(), isNull(), anyString(), anyString(), eq(2), eq(10)))
+        .thenReturn(Map.of("applications", Collections.emptyList(), "pagination", Map.of()));
+
+    mockMvc
+        .perform(get("/api/application").param("page", "2").param("size", "10"))
+        .andExpect(status().isOk());
+
+    verify(this.applicationService, times(1))
+        .getFilteredApplications(
+            eq("user1"), isNull(), isNull(), anyString(), anyString(), eq(2), eq(10));
+  }
+
+  @Test
+  @WithMockUser(username = "user1")
   public void getApplications_whenServiceFails_expect500() throws Exception {
-    when(this.applicationService.getApplications(anyString()))
+    when(this.applicationService.getFilteredApplications(
+            anyString(), any(), any(), anyString(), anyString(), anyInt(), anyInt()))
         .thenThrow(new ApplicationServiceFailException("Database error"));
 
     mockMvc
-        .perform(get("/api/application").principal(this.authentication))
+        .perform(get("/api/application"))
         .andExpect(status().isInternalServerError())
         .andExpect(jsonPath("$.error").value("INTERNAL_ERROR"))
         .andExpect(jsonPath("$.message").exists());
+  }
+
+  @Test
+  @WithMockUser(username = "user1")
+  public void getApplications_whenEmpty_expect200WithEmptyList() throws Exception {
+    when(this.applicationService.getFilteredApplications(
+            eq("user1"), isNull(), isNull(), anyString(), anyString(), anyInt(), anyInt()))
+        .thenReturn(
+            Map.of(
+                "applications",
+                Collections.emptyList(),
+                "pagination",
+                Map.of(
+                    "currentPage",
+                    0,
+                    "totalPages",
+                    0,
+                    "totalItems",
+                    0L,
+                    "itemsPerPage",
+                    20,
+                    "hasNext",
+                    false,
+                    "hasPrevious",
+                    false)));
+
+    mockMvc
+        .perform(get("/api/application"))
+        .andExpect(status().isOk())
+        .andExpect(jsonPath("$.applications").isEmpty())
+        .andExpect(jsonPath("$.pagination.totalItems").value(0));
   }
 }
